# ffnd-chkform-rpm-builder

./: .gitignore  Makefile  docker-compose.yml
SOURCES/: .gitignore  configure.ac  install-ffnd.patch
SOURCES/autobits/: .gitignore  configure.ac
SPECS/: freeform-nd.spec
autobits/: Makefile.am
builder/: Dockerfile
downloader/: Dockerfile
